fix: constrain board card layout to avoid dialog overflow in TaskCreateForm

--- a/src/app/main-pages/shared/task-create-form/task-create-form.component.scss
+++ b/src/app/main-pages/shared/task-create-form/task-create-form.component.scss
@@ -424,6 +424,7 @@ input.ng-invalid.ng-touched {
 
 .board-card {
   height: calc(88vh - 96px) !important;
+  max-height: 784px;
   padding-top: 0;
 }
 
